--- a/config.yml
+++ b/config.yml
@@ -15,17 +15,16 @@ params:
   dateFormat: January 2, 2006 at 3:04 PM
   disqusShortname: null
   timezoneString: " UTC"
-  logo: /images/clearstatus.svg
+  logo: ""
   description_header: Information about <a class='text-grey-darkest' title='Visit
     example.com' href='https://www.example.com/'>example</a> systems
     operations.<br />Follow us <a class='text-grey-darkest' title='Visit our
     page on Twitter' href='https://www.twitter.com/example'>on Twitter</a> or
     subscribe to <a class='text-grey-darkest' href='%s' >RSS</a><br />to be
     alerted of new events.
-  copyrightHolder: Example Inc.
+  copyrightHolder: DevonWebs 2021
   eventsPerPage: 10
   iconType: image/png
   icon: /images/clearstatus.png
-  description_footer: <a class='text-grey-darkest' title='Visit example.com'
-    href='https://www.example.com/'>Example.com</a> provides open-source
-    software for all kind of sectors.
+  description_footer: <a class='text-grey-darkest' title='DevonWebs'
+    href='https://www.devonwebs.co.uk/'>DevonWebs</a>
