Update Settings “main”

--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@ params:
   dateFormat: January 2, 2006 at 3:04 PM
   disqusShortname: null
   timezoneString: " UTC"
-  logo: ""
+  logo: static/images/uploads/dw-whmcs.png
   description_header: Information about <a class='text-grey-darkest' title='Visit
     example.com' href='https://www.example.com/'>example</a> systems
     operations.<br />Follow us <a class='text-grey-darkest' title='Visit our
