Update Settings “main”

--- a/config.yml
+++ b/config.yml
@@ -18,12 +18,7 @@ params:
   disqusShortname: null
   timezoneString: " UTC"
   logo: images/uploads/dw-whmcs.png
-  description_header: Information about <a class='text-grey-darkest' title='Visit
-    example.com' href='https://www.example.com/'>example</a> systems
-    operations.<br />Follow us <a class='text-grey-darkest' title='Visit our
-    page on Twitter' href='https://www.twitter.com/example'>on Twitter</a> or
-    subscribe to <a class='text-grey-darkest' href='%s' >RSS</a><br />to be
-    alerted of new events.
+  description_header: ""
   copyrightHolder: DevonWebs 2021
   eventsPerPage: 10
   iconType: image/png
