--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ params:
       link: https://www.devonwebs.co.uk/
     - name: Client Area
       description: ""
-      link: https://support.example.com/
+      link: https://my.devonwebs.uk/
     - name: Core Network
       link: https://network.20d.uk/
   dateFormat: January 2, 2006 at 3:04 PM
