Update Settings “main”

--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ params:
   dateFormat: January 2, 2006 at 3:04 PM
   disqusShortname: null
   timezoneString: " UTC"
-  logo: images/uploads/dw-whmcs.png
+  logo: images/uploads/devonwebs-final-03big.png
   description_header: If you are facing any issues and dont see anything here
     email support@devonwebs.uk and we will investigate your issue
   copyrightHolder: DevonWebs 2021
