--- a/config.yml
+++ b/config.yml
@@ -18,8 +18,7 @@ params:
   disqusShortname: null
   timezoneString: " UTC"
   logo: images/uploads/devonwebs-final-03big.png
-  description_header: If you are facing any issues and dont see anything here
-    email support@devonwebs.uk and we will investigate your issue
+  description_header: ""
   copyrightHolder: DevonWebs 2021
   eventsPerPage: 10
   iconType: image/png
